[package]
name = "minimal-lock-free-stack"
version = "0.0.0"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license = "MIT OR Apache-2.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/minimal-lock-free-stack"
repository              = "https://github.com/cosmicexplorer/minimal-lock-free-stack"

edition = "2021"


[dependencies]
portable-atomic = { version = "1", features = ["require-cas"] }
